--- a/index.htm
+++ b/index.htm
@@ -77,6 +77,7 @@
                                 <img class="icon" src="images/erpk.png" alt=""/>
                                 <div class="tags">
                                     <img class="tags-icon" src="images/Unity.png" alt=""/>
+                                    <img class="tags-icon" src="images/csharp.png" alt=""/>
                                 </div>
                             </div>
                         </div>
@@ -90,6 +91,7 @@
                                 <img class="icon" src="images/telacad.png" alt=""/>
                                 <div class="tags">
                                     <img class="tags-icon" src="images/Unity.png" alt=""/>
+                                    <img class="tags-icon" src="images/csharp.png" alt=""/>
                                 </div>
                             </div>
                         </div>
@@ -104,6 +106,7 @@
                                 <img class="icon" src="images/prgm.png" alt=""/>
                                 <div class="tags">
                                     <img class="tags-icon" src="images/Unity.png" alt=""/>
+                                    <img class="tags-icon" src="images/csharp.png" alt=""/>
                                 </div>
                             </div>
                         </div>
@@ -117,6 +120,10 @@
                                     with hundreds of employers and several software development teams.
                                 </p>
                                 <img class="icon" src="images/eitt.jpg" alt=""/>
+                                <div class="tags">
+                                    <img class="tags-icon" src="images/csharp.png" alt=""/>
+                                    <img class="tags-icon" src="images/cplus.png" alt=""/>
+                                </div>
                             </div>
                         </div>
 
@@ -129,6 +136,9 @@
                                     management APIs, image analysis processors and customer relationship management (CRM) systems.
                                 </p>
                                 <img class="icon" src="images/xor.png" alt=""/>
+                                <div class="tags">
+                                    <img class="tags-icon" src="images/csharp.png" alt=""/>
+                                </div>
                             </div>
                         </div>
 
@@ -139,6 +149,10 @@
                                 <h4 class="title-education">Faculty of Automatic Control and Computer Science </h4>
                                 <p class="description">Engineer
                                 </p>
+                                <div class="tags">
+                                    <img class="tags-icon" src="images/STUDY.png" alt=""/>
+                                    <img class="tags-icon" src="images/csharp.png" alt=""/>
+                                </div>
                             </div>
                         </div>
                         
@@ -149,6 +163,9 @@
                                 <h4 class="title-education"> Mathematics - Informatics </h4>
                                 <p class="description">College Degree
                                 </p>
+                                <div class="tags">
+                                    <img class="tags-icon" src="images/STUDY.png" alt=""/>
+                                </div>
                             </div>
                         </div>
                         
