--- a/index.htm
+++ b/index.htm
@@ -51,10 +51,10 @@
                 clearly and accurately with dedication to maintaining high quality standards.
                 </p>
             <ul id="service-icons">
-                <li class="services-design">Design</li>
+<!--                <li class="services-design">Design</li>-->
                 <li class="services-mobile">Mobile</li>
-                <li class="services-film">Film</li>
-                <li class="services-photo">Photo</li>
+<!--                <li class="services-film">Film</li>-->
+<!--                <li class="services-photo">Photo</li>-->
             </ul>
         </div>
         <div class="bottom-divider"></div>
@@ -183,7 +183,6 @@
                                 </div>
                             </div>
                         </div>
-                        
                     </div>
                 </div>
             </div>
@@ -197,21 +196,44 @@
         <h1>Projects</h1>
         <div class="top-divider"></div>
         <div class="content">
-
-
             <ul id="work-thumbs">
-                <li><a href="images/work/fury.png" rel="prettyPhoto[1]" title="Fury Knights"><img
-                        src="images/work/fury.png"></a></li>
+                <li><a href="images/work/fury.pngv" rel="prettyPhoto[1]" title="Fury Knights"><img
+                        src="images/work/fury.png"></a>
+
+                    <div class="imageTags">
+                        <span >Lockstep, Real-time,<br> Deterministic, 3D</span>
+                    </div>
+                </li>
                 <li><a href="images/work/aol.png" rel="prettyPhoto[1]" title="Age Of Lords"><img
-                        src="images/work/aol.png"></a></li>
+                        src="images/work/aol.png"></a>
+                    <div class="imageTags">
+                        <span class="imageTags-text" >Strategy, Real-time</span>
+                    </div>
+                </li>
                 <li><a href="images/work/wap.png" rel="prettyPhoto[1]" title="Image Description"><img
-                        src="images/work/wap.png"></a></li>
+                        src="images/work/wap.png"></a>
+                    <div class="imageTags">
+                        <span class="imageTags-text" >Strategy, Real-time</span>
+                    </div>
+                </li>
                 <li class="last"><a href="images/work/nam.png" rel="prettyPhoto[1]"
-                                    title="Image Description"><img src="images/work/nam.png"></a></li>
+                                    title="Image Description"><img src="images/work/nam.png"></a>
+                    <div class="imageTags">
+                        <span class="imageTags-text" >Strategy, Real-time</span>
+                    </div>
+                </li>
                 <li><a href="images/work/ball.png" rel="prettyPhoto[1]" title="Image Description"><img
-                        src="images/work/ball.png"></a></li>
+                        src="images/work/ball.png"></a>
+                    <div class="imageTags">
+                        <span class="imageTags-text" >Hyper-Casual</span>
+                    </div>
+                </li>
                 <li><a href="images/work/magnet.png" rel="prettyPhoto[1]" title="Image Description"><img
-                        src="images/work/magnet.png"></a></li>
+                        src="images/work/magnet.png"></a>
+                    <div class="imageTags">
+                        <span class="imageTags-text" > Twisted Python, WegGL, <br>Puzzle</span>
+                    </div>
+                </li>
 <!--                <li><a href="images/work/work-full7.jpg" rel="prettyPhoto[1]" title="Image Description"><img-->
 <!--                        src="images/work/work-thumb7.jpg"></a></li>-->
 <!--                <li class="last"><a href="images/work/work-full8.jpg" rel="prettyPhoto[1]"-->
