--- a/index.htm
+++ b/index.htm
@@ -197,27 +197,27 @@
         <div class="top-divider"></div>
         <div class="content">
             <ul id="work-thumbs">
-                <li><a href="images/work/fury.pngv" rel="prettyPhoto[1]" title="Fury Knights"><img
-                        src="images/work/fury.png"></a>
+                <li><a href="fury.htm" rel="prettyPhoto[1]" title="Fury Knights">
+                    <img src="images/work/fk/icon.png"></a>
 
                     <div class="imageTags">
                         <span >Lockstep, Real-time,<br> Deterministic, 3D</span>
                     </div>
                 </li>
-                <li><a href="images/work/aol.png" rel="prettyPhoto[1]" title="Age Of Lords"><img
-                        src="images/work/aol.png"></a>
+                <li><a href="erpk.htm" rel="prettyPhoto[1]" title="Age Of Lords"><img
+                        src="images/work/erpk/aol.png"></a>
                     <div class="imageTags">
                         <span class="imageTags-text" >Strategy, Real-time</span>
                     </div>
                 </li>
-                <li><a href="images/work/wap.png" rel="prettyPhoto[1]" title="Image Description"><img
-                        src="images/work/wap.png"></a>
+                <li><a href="erpk.htm" rel="prettyPhoto[1]" title="Image Description"><img
+                        src="images/work/erpk/wap.png"></a>
                     <div class="imageTags">
                         <span class="imageTags-text" >Strategy, Real-time</span>
                     </div>
                 </li>
-                <li class="last"><a href="images/work/nam.png" rel="prettyPhoto[1]"
-                                    title="Image Description"><img src="images/work/nam.png"></a>
+                <li class="last"><a href="erpk.htm" rel="prettyPhoto[1]"
+                                    title="Image Description"><img src="images/work/erpk/nam.png"></a>
                     <div class="imageTags">
                         <span class="imageTags-text" >Strategy, Real-time</span>
                     </div>
