--- a/erpk.htm
+++ b/erpk.htm
@@ -31,8 +31,6 @@
 <div id="container">
 
     <div id="about">
-        <h1>MMORPG</h1>
-
         <div class="top-divider"></div>
         <div class="content">
             <img src="images/work/erpk/nam.png" alt=""/>
@@ -45,6 +43,7 @@
         <div>
             <h3>About</h3>
             <p>TCP Protocol for custom netoworking layer</p>
+            <p>• continuous development in almost every section of the project</p>
             <p>• enjoied implementing several MATHEMATICAL solutions for situations like : fitting different types of
                 items to sum up a certain quanitity, or efficient ways of calculating ununiform path representation, etc</p>
             <p>• screen implementation with NGUI</p>
