--- a/fury.htm
+++ b/fury.htm
@@ -31,7 +31,6 @@
 <div id="container">
 
     <div id="about">
-        <h1>Fury Knights</h1>
 
         <div class="top-divider"></div>
         <div class="content">
@@ -39,6 +38,7 @@
             <h2>Unity3D, C# </h2>
             <p>Main developer with an artist and a backend colleague</p>
             <p>The game development was suspended as business decision</p>
+            <a href="https://www.facebook.com/FuryKnights/">Fury Knights</a>
         </div>
         <div>
             <h3>About</h3>
