--- a/index.htm
+++ b/index.htm
@@ -70,6 +70,7 @@
             <div class="bar back intermediate" data-skill="Python"></div>
             <div class="bar back basic" data-skill="C++"></div>
             <div class="bar learning" data-skill="Blender, Photoshop, Java, Dart, Swift "></div>
+            <p>.. and a little bit of HTML & CSS for making this website</p>
         </div>
     </div>
     
@@ -222,16 +223,16 @@
                         <span class="imageTags-text" >Strategy, Real-time</span>
                     </div>
                 </li>
-                <li><a href="images/work/ball.png" rel="prettyPhoto[1]" title="Image Description"><img
+                <li><a href="magnet.htm" rel="prettyPhoto[1]" title="Image Description"><img
+                        src="images/work/magnet/icon.png"></a>
+                    <div class="imageTags">
+                        <span class="imageTags-text" > Twisted Python, WegGL, <br>Puzzle</span>
+                    </div>
+                </li>
+                <li><a href="https://apps.apple.com/us/app/rolling-ball-puzzle/id1465179638" rel="prettyPhoto[1]" title="Image Description"><img
                         src="images/work/ball.png"></a>
                     <div class="imageTags">
                         <span class="imageTags-text" >Hyper-Casual</span>
-                    </div>
-                </li>
-                <li><a href="images/work/magnet.png" rel="prettyPhoto[1]" title="Image Description"><img
-                        src="images/work/magnet.png"></a>
-                    <div class="imageTags">
-                        <span class="imageTags-text" > Twisted Python, WegGL, <br>Puzzle</span>
                     </div>
                 </li>
 <!--                <li><a href="images/work/work-full7.jpg" rel="prettyPhoto[1]" title="Image Description"><img-->
@@ -258,28 +259,29 @@
         <h1>Connect</h1>
         <div class="top-divider"></div>
         <div class="content">
-            <div id="form">
-                <form action="#">
-                    <span>Name</span>
-                    <input type="text" name="name" class="name"/>
-                    <span>Email</span>
-                    <input type="text" name="email" class="email"/>
-                    <span>Message</span>
-                    <textarea class="message"></textarea>
-                    <input type="submit" name="submite" value="Submit" class="submit">
-                </form>
-            </div>
+<!--            <div id="form">-->
+<!--                <form action="#">-->
+<!--                    <span>Name</span>-->
+<!--                    <input type="text" name="name" class="name"/>-->
+<!--                    <span>Email</span>-->
+<!--                    <input type="text" name="email" class="email"/>-->
+<!--                    <span>Message</span>-->
+<!--                    <textarea class="message"></textarea>-->
+<!--                    <input type="submit" name="submite" value="Submit" class="submit">-->
+<!--                </form>-->
+<!--            </div>-->
             <div id="social-footer">
-                <h2>Follow Me:</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras diam risus, dignissim pharetra sagittis
-                    sed, adipiscing nec felis. Maecenas non nulla eget ligula semper </p>
+                <h2>Details:</h2>
+                <h3><a href="mailto:liviudaniel.lupascu@gmail.com"> Send Mail </a> </h3>
+                <p>Mail: liviudaniel.lupascu@gmail.com</p>
+                <p>Phone: 0040 748 228 332</p>
                 <ul id="sm-links">
                     <li><a href="https://www.facebook.com/danielpunct" class="facebook">Facebook</a></li>
-                    <li><a href="#" class="twitter">Twitter</a></li>
-                    <li><a href="#" class="dribble">Dribble</a></li>
-                    <li><a href="#" class="vimeo">Vimeo</a></li>
-                    <li><a href="#" class="youtube">YouTube</a></li>
-                    <li><a href="#" class="linkedin">LinkedIn</a></li>
+<!--                    <li><a href="#" class="twitter">Twitter</a></li>-->
+<!--                    <li><a href="#" class="dribble">Dribble</a></li>-->
+<!--                    <li><a href="#" class="vimeo">Vimeo</a></li>-->
+<!--                    <li><a href="#" class="youtube">YouTube</a></li>-->
+                    <li><a href="http://www.linkedin.com/in/danielliviulupascu" class="linkedin">LinkedIn</a></li>
                 </ul>
             </div>
         </div>
