--- a/fury.htm
+++ b/fury.htm
@@ -36,14 +36,13 @@
         <div class="content">
             <img src="images/work/fk/icon.png" alt=""/>
             <h2>Unity3D, C# </h2>
-            <p>Main developer with an artist and a backend colleague</p>
-            <p>The game development was suspended as business decision</p>
+            <p>Solo Unity developer with an artist and a backend colleague</p>
             <a href="https://www.facebook.com/FuryKnights/">Fury Knights</a>
         </div>
         <div>
             <h3>About</h3>
             <p>Contains card system items & timed Chests logic</p>
-            <p>Game play is real-time game with human opponent, by TCP protocol</p>
+            <p>Game play is real-time with human opponent over TCP protocol</p>
             <p>• developed the LOCKSTEP logic for synchronizing player actions over timed steps </p>
             <p>• all the calculations are DETERIMINISTIC</p>
             <p>• all active assets are 3D - optimised with custom shaders</p>
