--- a/erpk.htm
+++ b/erpk.htm
@@ -37,8 +37,8 @@
             <h2>Unity3D, C# </h2>
             <p>Sustained development for long term games</p>
             <p>Games are live with 500.000+ active installs</p>
-            <a href="https://war-and-peace.com/">War & Peace</a> &nbsp;
-            <a href="http://www.ageoflords.com/">Age of Lords</a>
+            <p> Links: <a href="https://war-and-peace.com/">War & Peace</a> &nbsp;
+                <a href="http://www.ageoflords.com/">Age of Lords</a> </p>
         </div>
         <div>
             <h3>About</h3>
