--- a/fury.htm
+++ b/fury.htm
@@ -37,7 +37,7 @@
             <img src="images/work/fk/icon.png" alt=""/>
             <h2>Unity3D, C# </h2>
             <p>Solo Unity developer with an artist and a backend colleague</p>
-            <a href="https://www.facebook.com/FuryKnights/">Fury Knights</a>
+            <p>Links: <a href="https://www.facebook.com/FuryKnights/">Fury Knights</a></p>
         </div>
         <div>
             <h3>About</h3>
