--- a/magnet.htm
+++ b/magnet.htm
@@ -38,7 +38,7 @@
             <h2>Personal project: Unity3D, WebGl, C#, Pyton </h2>
             <p>Two projects: WebGl with custom made python server & Android with GameSparks server</p>
             <p>WebGl version may not be working (sql server needs maintenance)/Android game on app store is live</p>
-            <p>Links: <a href="http://magnets-page.23rok.com/">Magnets</a> &nbsp;&nbsp;
+            <p>Links: <a href="https://play.google.com/store/apps/details?id=com.unyawn.magnets&hl=en">Magnets</a> &nbsp;&nbsp;
                 <a href="https://www.facebook.com/magnets23">Development page</a> &nbsp;</p>
         </div>
         <div>
